Source/Native/nanosockets.h


	typedef int64_t NanoSocket;


	typedef enum _NanoStatus {
		NANOSOCKETS_STATUS_OK = 0,
		NANOSOCKETS_STATUS_ERROR = -1
	} NanoStatus;


	typedef struct _NanoAddress {
		union {
			struct in6_addr ipv6;
			struct {
				uint8_t zeros[10];
				uint16_t ffff;
				struct in_addr ip;
			} ipv4;
		};
		uint16_t port;
	} NanoAddress;


	NANOSOCKETS_API NanoStatus nanosockets_initialize(void);


	NANOSOCKETS_API void nanosockets_deinitialize(void);


	NANOSOCKETS_API NanoSocket nanosockets_create(int, int);


	NANOSOCKETS_API void nanosockets_destroy(NanoSocket*);


	NANOSOCKETS_API int nanosockets_bind(NanoSocket, const NanoAddress*);


	NANOSOCKETS_API int nanosockets_connect(NanoSocket, const NanoAddress*);


	NANOSOCKETS_API NanoStatus nanosockets_set_option(NanoSocket, int, int, const int*, int);


	NANOSOCKETS_API NanoStatus nanosockets_get_option(NanoSocket, int, int, int*, int*);


	NANOSOCKETS_API NanoStatus nanosockets_set_nonblocking(NanoSocket, uint8_t);


	NANOSOCKETS_API NanoStatus nanosockets_set_dontfragment(NanoSocket);


	NANOSOCKETS_API int nanosockets_poll(NanoSocket, long, unsigned char);


	NANOSOCKETS_API int nanosockets_send(NanoSocket, const NanoAddress*, const uint8_t*, int);


	NANOSOCKETS_API int nanosockets_send_offset(NanoSocket, const NanoAddress*, const uint8_t*, int, int);


	NanoStatus nanosockets_initialize(void) {
		#ifdef NANOSOCKETS_WINDOWS
			WSADATA wsaData = { 0 };

			if (WSAStartup(MAKEWORD(2, 2), &wsaData))
				return NANOSOCKETS_STATUS_ERROR;

			if (LOBYTE(wsaData.wVersion) != 2 || HIBYTE(wsaData.wVersion) != 2) {
				WSACleanup();

				return NANOSOCKETS_STATUS_ERROR;
			}
		#endif

		return NANOSOCKETS_STATUS_OK;
	}


	void nanosockets_deinitialize(void) {
		#ifdef NANOSOCKETS_WINDOWS
			WSACleanup();
		#endif
	}


	NanoSocket nanosockets_create(int domain, int sendBufferSize, int receiveBufferSize) {
		int socketType = SOCK_DGRAM;

		#ifdef SOCK_CLOEXEC
			socketType |= SOCK_CLOEXEC;
		#endif

		NanoSocket socketHandle = socket(domain, socketType, 0);

		if (socketHandle > -1) {
			// int onlyIPv6 = 0;

			// if (setsockopt(socketHandle, IPPROTO_IPV6, IPV6_V6ONLY, (const char*)&onlyIPv6, sizeof(onlyIPv6)) != 0)
			// 	goto destroy;

			if (setsockopt(socketHandle, SOL_SOCKET, SO_SNDBUF, (const char*)&sendBufferSize, sizeof(sendBufferSize)) != 0)
				goto destroy;

			if (setsockopt(socketHandle, SOL_SOCKET, SO_RCVBUF, (const char*)&receiveBufferSize, sizeof(receiveBufferSize)) != 0)
				goto destroy;

			goto create;

			destroy:

			nanosockets_destroy(&socketHandle);

			return -1;
		}

		create:

		return socketHandle;
	}


	void nanosockets_destroy(NanoSocket* socket) {
		if (*socket > 0) {
			#if NANOSOCKETS_WINDOWS
				closesocket(*socket);
			#else
				close(*socket);
			#endif

			*socket = 0;
		}
	}


	int nanosockets_bind(NanoSocket socket, const NanoAddress* address) {
		struct sockaddr_in socketAddress = { 0 };

		socketAddress.sin_family = AF_INET;

		if (address == NULL) {
			socketAddress.sin_addr = INADDR_ANY;
			socketAddress.sin_port = 0;
		} else {
			socketAddress.sin_addr = address->ipv4.ip;
			socketAddress.sin_port = NANOSOCKETS_HOST_TO_NET_16(address->port);
		}

		return bind(socket, (struct sockaddr*)&socketAddress, sizeof(socketAddress));
	}


	int nanosockets_connect(NanoSocket socket, const NanoAddress* address) {
		struct sockaddr_in6 socketAddress = { 0 };

		socketAddress.sin6_family = AF_INET6;
		socketAddress.sin6_addr = address->ipv6;
		socketAddress.sin6_port = NANOSOCKETS_HOST_TO_NET_16(address->port);

		return connect(socket, (struct sockaddr*)&socketAddress, sizeof(socketAddress));
	}


	NanoStatus nanosockets_set_option(NanoSocket socket, int level, int optionName, const int* optionValue, int optionLength) {
		if (setsockopt(socket, level, optionName, (const char*)optionValue, optionLength) == 0)
			return NANOSOCKETS_STATUS_OK;
		else
			return NANOSOCKETS_STATUS_ERROR;
	}


	NanoStatus nanosockets_get_option(NanoSocket socket, int level, int optionName, int* optionValue, int* optionLength) {
		if (getsockopt(socket, level, optionName, (char*)optionValue, (socklen_t*)optionLength) == 0)
			return NANOSOCKETS_STATUS_OK;
		else
			return NANOSOCKETS_STATUS_ERROR;
	}


	NanoStatus nanosockets_set_nonblocking(NanoSocket socket, uint8_t state) {
		#ifdef NANOSOCKETS_WINDOWS
			DWORD nonBlocking = state;

			if (ioctlsocket(socket, FIONBIO, &nonBlocking) != 0)
				return NANOSOCKETS_STATUS_ERROR;
		#else
			int nonBlocking = state;

			if (fcntl(socket, F_SETFL, O_NONBLOCK, nonBlocking) == -1)
				return NANOSOCKETS_STATUS_ERROR;
		#endif

		return NANOSOCKETS_STATUS_OK;
	}


	NanoStatus nanosockets_set_dontfragment(NanoSocket socket) {
		#ifdef IP_DONTFRAG
			int dontFragment = 1;

			if (setsockopt(socket, IPPROTO_IP, IP_DONTFRAG, (const char*)&dontFragment, sizeof(dontFragment)) != 0)
				return NANOSOCKETS_STATUS_ERROR;
		#elif defined IP_DONTFRAGMENT
			DWORD dontFragment = 1;

			if (setsockopt(socket, IPPROTO_IP, IP_DONTFRAGMENT, (const char*)&dontFragment, sizeof(dontFragment)) != 0)
				return NANOSOCKETS_STATUS_ERROR;
		#else
			#error "Don't fragment socket option is not implemented for this platform"
		#endif

		return NANOSOCKETS_STATUS_OK;
	}


	int nanosockets_poll(NanoSocket socket, long timeout, unsigned char type) {
		fd_set set = { 0 };
		struct timeval time = { 0 };

		FD_ZERO(&set);
		FD_SET(socket, &set);

		time.tv_sec = timeout / 1000;
		time.tv_usec = (timeout % 1000) * 1000;

		#pragma warning(suppress: 4244)
		return select(socket + 1, type == 0 ? &set : NULL, type == 1 ? &set : NULL, type == 2 ? &set : NULL, &time);
	}


	int nanosockets_send(NanoSocket socket, const NanoAddress* address, const uint8_t* buffer, int bufferLength) {
		struct sockaddr_in socketAddress = { 0 };

		if (address != NULL) {
			socketAddress.sin_family = AF_INET;
			socketAddress.sin_addr = address->ipv4.ip;
			socketAddress.sin_port = NANOSOCKETS_HOST_TO_NET_16(address->port);
		}

		return sendto(socket, (const char*)buffer, bufferLength, 0, (address != NULL ? (struct sockaddr*)&socketAddress : NULL), sizeof(socketAddress));
	}


	int nanosockets_send_offset(NanoSocket socket, const NanoAddress* address, const uint8_t* buffer, int offset, int bufferLength) {
		return nanosockets_send(socket, address, buffer + offset, bufferLength);
	}